--- a/css/main.css
+++ b/css/main.css
@@ -1351,11 +1351,11 @@ select {
     top: 20px;
     right: 35px;
     color: white;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     cursor: pointer;
     background: rgba(0, 0, 0, 0.6);
-    padding: 10px;
+    padding: 1px 10px 2px 10px;
     border-radius: 50%;
 }
 
@@ -1456,7 +1456,7 @@ select {
     margin-bottom: 2rem;
 }
 .cafe-imgs img{
-    width: 25rem;
+    width: 7rem;
     aspect-ratio: 3/2;
 }
 
@@ -1507,7 +1507,7 @@ select {
 .favorite-text p{
     margin-bottom: 0rem;
 }
-.empty-faves{
+.empty-faves, .empty-item{
     width: 100%;
     padding: 8rem 0rem 8rem 0rem;
 }
@@ -1714,8 +1714,13 @@ background-color: var(--medium-blue);
     transform: scale(0.8);
   }
 
-
+@media screen and (min-width: 400px){
+    .cafe-imgs img{
+        width: 10rem;
+    }
+}
 @media screen and (min-width: 481px) {
+    
     .privacy-policy p{
         width: 30rem;
     }
@@ -1888,6 +1893,9 @@ background-color: var(--medium-blue);
     width: 100%;
     height: 18rem;
     border-radius: 0px 8px 8px 0px;
+}
+.cafe-imgs img{
+    width: 15rem;
 }
 }
 
@@ -2348,7 +2356,9 @@ background-color: var(--medium-blue);
     margin: unset;
     margin-bottom: 2rem;
 }
-
+.cafe-imgs img{
+    width: 25rem;
+}
 }
 
 @media screen and (min-width: 1200px){
