--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,9 @@ a {
 .mobile-nav {
     width: 100%;
 }
-
+.mobile-nav a{
+    color: white;
+}
 .icons {
     position: fixed;
     right: 0rem;
@@ -181,6 +183,7 @@ a {
 .basket-icon{
     display: flex;
     justify-content: start;
+    position: relative;
 }
 .items-icons{
     display: flex;
@@ -1454,8 +1457,9 @@ select {
     background-color: white;
     position: absolute;
     top: -0.2rem;
-    right: 0.5rem;
+    left: 1rem;
     font-size: 0.8rem;
+    position: absolute;
 }
 
 /*CAFE PAGE*/
