--- a/css/main.css
+++ b/css/main.css
@@ -1565,29 +1565,40 @@ select {
     padding-top: 9rem;
 }
 
+.cart-items{
+    border: 2px solid green;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .cart-item{
     background-color: var(--light-blue);
     color: black;
     margin-bottom: 1.5rem;
-    height: unset;
-    width: 100%;
+    height: 5rem;
+    width: 20rem;
+  
 }
 .cart-item img{
-    width: 7rem;
-    height: auto;
+    width: 5rem !important;
+    height: 5rem;
     border-radius: 8px 0px 0px 8px;
 }
 .cart-item-text{
-    margin-top: 0.8rem;
-    padding: 0rem 0rem 0rem 1.2rem;
-    font-size: 0.8rem;
+    margin-top: 0.35rem;
+    padding: 0rem 0rem 0rem 1rem;
+    font-size: 0.7rem;
     width: 100%;
+    height: fit-content !important;
 }
 .cart-price{
     width: 40%;
+    margin-top: -0.2rem;
 }
 .cart-total{
-    margin: 2rem 0rem 3rem 0rem;
+    margin: 2rem 0rem 2rem 0rem;
     padding: 2rem 1rem 1rem 1rem;
     background-color: rgba(225, 225, 225, 0.904);
 }
@@ -1595,6 +1606,9 @@ select {
     width: 15rem;
     padding-bottom: 0.2rem;
     border-bottom: 1px solid black;
+}
+.cart-total-padding{
+    padding: 1rem;
 }
 .total-info{
     margin-top: 2rem;
@@ -1611,7 +1625,7 @@ select {
 }
 .total-container img{
     margin-top: 3rem;
-    width: 10rem;
+    width: 8rem;
 }
 .total-container button{
     width: 75%;
@@ -1674,11 +1688,15 @@ background-color: var(--medium-blue);
     margin-bottom: 1rem;
 }
 .deleteCartItem{
-    padding: 1rem 2rem 1rem 1rem;
+    padding: 1rem 2rem 0rem 1rem;
     font-weight: bold;
+    height: 2rem;
 }
 .empty-cart{
     padding: 10rem;
+}
+.cart-subtotal{
+    margin-top: -0.6rem;
 }
 
 
@@ -1748,7 +1766,13 @@ background-color: var(--medium-blue);
 
   .cart-contents, .cart-info-cont{
     padding: 0rem 2rem 0rem 2rem;
+    border: 2px solid green;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
   }
+  
 
   /* confirmation page */
   .confirmation-page{
@@ -1816,6 +1840,12 @@ background-color: var(--medium-blue);
    
 }
 @media screen and (min-width: 650px) {
+    .cart-item{
+        width: 30rem;
+    }
+    .cart-total-padding{
+        padding: 3rem;
+    }
     .menuImg1, .menuImg2{
     width: 20rem !important;
 }
@@ -1963,7 +1993,28 @@ background-color: var(--medium-blue);
 
 /*LAPTOP*/
 @media screen and (min-width: 992px) {
-        
+    .cart-flex{
+        border: 2px solid red;
+        display: flex;
+        justify-content: space-evenly;
+        padding-top: 10rem;
+    }
+    .cart-items{
+        margin-top: 2rem;
+    }
+    .cart-cont{
+        padding: 0rem 0rem 0rem 0rem;
+    }
+    .cart-total{
+        border: 2px solid orange;
+        width: 25rem !important;
+    }
+    .cart-total-padding{
+        padding: 0rem;
+    }
+    .cart-item{
+        margin-bottom: 0.8rem;
+    }
     .product-div{
       
         justify-content: end !important;
@@ -2002,7 +2053,7 @@ background-color: var(--medium-blue);
       }
       
       .confirmation a{
-        color: white;
+        color: #ffffff;
       }
       .confirmation p{
         font-size: 2rem;
@@ -2015,12 +2066,15 @@ background-color: var(--medium-blue);
     }
     .cart-item{
         width: 30rem;
-        margin-top: 2rem;
+    }
+    .total-container{
+        height: 30rem;
+        width: 20rem;
     }
     .total-container button{
         font-size: 0.8rem;
-        width: 30rem;
-        padding: 0.4rem;
+        width: 20rem;
+        padding: 0.5rem;
     }
     .payment-form{
         width: 60rem;
@@ -2040,6 +2094,7 @@ background-color: var(--medium-blue);
     }
     .cart-info-cont{
         display: flex;
+        flex-direction: row-reverse;
         justify-content: space-evenly;
     }
     .cart-information{
@@ -2501,6 +2556,15 @@ background-color: var(--medium-blue);
     .product-div-info p{
         padding: 0rem !important;
         font-size: 0.9rem;
+    }
+    .cart-flex{
+        padding-top: 6.5rem;
+    }
+    .cart-items{
+        width: 35rem;
+    }
+    .cart-item{
+        width: 35rem;
     }
 
 
